make sure fancybox is visible when appropriate

--- a/component/SalesRouter.styl
+++ b/component/SalesRouter.styl
@@ -1,6 +1,9 @@
 body > div
   display none
 
+body > .fancybox-wrap.fancybox-opened
+  display block
+
 // would be nice to infer this stuff from sales-url-mappings
 body.super > .SuperAdmin-root
   display block
